--- a/S3_Upload/templates/index.html
+++ b/S3_Upload/templates/index.html
@@ -12,18 +12,15 @@
     <h1>Upload Your Files Bro</h1>
 
   <div class="container">
-      <form  method="POST" action = "" enctype="multipart/form-data">
-        {{ form.hidden_tag() }}
 
-        <div class="form-group">
-          {{ form.picture.label(class="form-group") }}
-          {{ form.picture(class="form-control-file") }}
-        </div>
-        
-        <div class="form-group">
-            {{ form.submit(class="btn btn-primary") }}
-        </div>
-      </form>
+
+      <form action="/" method="POST" enctype="multipart/form-data">
+      <div class="form-group">
+          <label for="user_file">Upload Your File</label>
+          <input type="file" class="form-control" placeholder="Filename" name="user_file">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
   </div>
 
